[build-system]
requires = ["setuptools>=58.0.4", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "northwest_poker_bot"
description = ""
version = "0.0.1"
authors = [
    { name = "vasgg", email = "vas.g@me.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram>=v3.2.0",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.1",
    "aiosqlite>=0.19",
    "greenlet>=3.0.3",
]
requires-python = ">=3.10"

[tool.setuptools]
zip-safe = false
include-package-data = false

[options]
zip_safe = false
include_package_data = true

[options.packages.find]
namespace = true
include = ["src*"]

[project.scripts]
bot-run = "main:run_main"

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["ALL"]
ignore = ["Q", "T", "D", "ANN", "UP", "RUF", "G004", "RET504", "ISC002", "INP001", "EM101", "TRY003", "PTH", "TD", "FIX002"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
