[build-system]
requires = ["setuptools>=58.0.4", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "northwest_poker_bot"
description = ""
version = "1.2"
authors = [
    { name = "vasgg", email = "vas.g@me.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram>=v3.2.0",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.1",
    "aiosqlite>=0.19",
    "greenlet>=3.0.3",
    "arrow>=1.3.0",
    "gspread>=6.0.2",
    "oauth2client>=4.1.3",
]
requires-python = ">=3.10"

[project.scripts]
bot-run = "main:run_main"

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["ALL"]
ignore = ["Q", "T", "D", "ANN", "UP", "RUF", "G004", "RET504", "ISC002", "INP001", "EM101", "TRY003", "PTH", "TD", "FIX002"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
